# crypto_bigint_rust

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml
.cargo/: config
homework1/: Cargo.toml  README.md
homework1/src/: lib.rs  main.rs
homework1/src/crypto/: caesar.rs  mod.rs  vigenere.rs
homework1/src/logic/: config.rs  error.rs  mod.rs  output.rs
homework1/tests/: integration_test.rs
homework2/: Cargo.toml  README.md
homework2/src/: lib.rs  main.rs
homework2/src/crypto/: caesar.rs  rsa.rs  vigenere.rs
homework2/src/crypto/rsa/: threadpool.rs
homework2/src/encoding/: mod.rs
homework2/src/logic/: config.rs  mod.rs  output.rs
homework2/src/logic/bigint/: comparison.rs  conversion.rs  division.rs  exponentiation.rs  multiplication.rs  negation.rs  prime.rs
homework2/tests/: integration_test.rs
homework3/: Cargo.toml  README.md  Trunk.toml
homework3/backend/: Cargo.toml
homework3/backend/src/: lib.rs
homework3/frontend/: Cargo.toml  index.html
homework3/frontend/src/: lib.rs  main.rs
homework3/frontend/src/nav/: mod.rs  router.rs
homework3/frontend/src/pages/: home.rs  login.rs  mod.rs  not_found.rs
homework3/logic/: Cargo.toml
homework3/logic/src/crypto/: diffie_hellman.rs  mod.rs
homework3/logic/src/logic/: bigint.rs  config.rs
homework3/logic/src/logic/bigint/: addition.rs  factor.rs  gcd.rs  modulus.rs  randomisation.rs  subtraction.rs
homework3/logic/tests/: integration_test.rs
homework3/main/: Cargo.toml
homework3/main/src/: main.rs
