[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
yewtil = "0.4.0"
yew-router = "0.15.0"
logic = {path = "../logic"}
getrandom = { version = "0.2.3", features = ["js"] }
#reqwest = "0.11.6"
reqwasm = "0.2.1"
log = "0.4.14"
wasm-logger = "0.2.0"
futures = "0.3.17"
#[dependencies.reqwest]
#version = "0.11.6"
#features = [
#    'blocking',
#]
wasm-bindgen-futures = "0.4.28"
serde = "1.0.130"

[dependencies.web-sys]
version = "0.3.55"
features = [
    'Document',
    'Element',
    'console',
    'HtmlCollection',
    'HtmlFormElement',
    'Window',
]
